--- a/rsm/home.html
+++ b/rsm/home.html
@@ -23,14 +23,25 @@
                     </svg>
                 </button>
                 <img src="img/logo-header.png" alt="" class="header__logo">
-                <nav class="header__nav flex">
-                    <a href="#" class="header__nav-elem semi-bold color--black hover">Цены</a>
-                    <a href="#" class="header__nav-elem semi-bold color--black hover">О компании</a>
-                    <a href="#" class="header__nav-elem semi-bold color--black hover">Поломки</a>
-                    <a href="#" class="header__nav-elem semi-bold color--black hover">Отзывы</a>
-                    <a href="#" class="header__nav-elem semi-bold color--black hover">Гарантия</a>
-                    <a href="#" class="header__nav-elem semi-bold color--black hover">Бренды</a>
-                </nav>
+                <form action="" class="header__nav-area grid">
+                    <label for="search" class="header__search input bg--light-grey">
+                        <button class="flex hover" type="submit">
+                            <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M8.5 2C4.91015 2 2 4.91015 2 8.5C2 12.0899 4.91015 15 8.5 15C12.0899 15 15 12.0899 15 8.5C15 4.91015 12.0899 2 8.5 2ZM0 8.5C0 3.80558 3.80558 0 8.5 0C13.1944 0 17 3.80558 17 8.5C17 13.1944 13.1944 17 8.5 17C3.80558 17 0 13.1944 0 8.5Z"/>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M13.0927 13.0927C13.4832 12.7022 14.1164 12.7022 14.5069 13.0927L19.7069 18.2927C20.0974 18.6832 20.0974 19.3164 19.7069 19.7069C19.3164 20.0974 18.6832 20.0974 18.2927 19.7069L13.0927 14.5069C12.7022 14.1164 12.7022 13.4832 13.0927 13.0927Z"/>
+                            </svg>
+                        </button>
+                        <input class="semi-bold color--black" name="search" id="search" type="search" placeholder="Поиск">
+                    </label>
+                    <nav class="header__nav flex">
+                        <a href="#" class="header__nav-elem semi-bold color--black hover">Цены</a>
+                        <a href="#" class="header__nav-elem semi-bold color--black hover">О компании</a>
+                        <a href="#" class="header__nav-elem semi-bold color--black hover">Поломки</a>
+                        <a href="#" class="header__nav-elem semi-bold color--black hover">Отзывы</a>
+                        <a href="#" class="header__nav-elem semi-bold color--black hover">Гарантия</a>
+                        <a href="#" class="header__nav-elem semi-bold color--black hover">Бренды</a>
+                    </nav>
+                </form>
             </div>
             <div class="header__right-area grid">
                 <div class="header__number-area flex">
@@ -58,7 +69,7 @@
             </div>
         </div>
     </header>
-    <header class="header bg--light-grey shadow">
+    <header class="header bg--white shadow">
         <div class="header__wrapper flex">
             <nav class="header__sub-menu flex">
                 <a href="#" class="header__sub-menu-elem flex hover">
@@ -66,19 +77,19 @@
                         <path d="M16 0H2C1.46957 0 0.960859 0.210714 0.585786 0.585786C0.210714 0.960859 0 1.46957 0 2V24C0 24.5304 0.210714 25.0391 0.585786 25.4142C0.960859 25.7893 1.46957 26 2 26H16C16.5304 26 17.0391 25.7893 17.4142 25.4142C17.7893 25.0391 18 24.5304 18 24V2C18 1.46957 17.7893 0.960859 17.4142 0.585786C17.0391 0.210714 16.5304 0 16 0ZM16 2V10H2V2H16ZM2 24V12H16V24H2Z"/>
                         <path d="M14 8C14.2652 8 14.5196 7.89464 14.7071 7.70711C14.8946 7.51957 15 7.26522 15 7V5C15 4.73478 14.8946 4.48043 14.7071 4.29289C14.5196 4.10536 14.2652 4 14 4C13.7348 4 13.4804 4.10536 13.2929 4.29289C13.1054 4.48043 13 4.73478 13 5V7C13 7.26522 13.1054 7.51957 13.2929 7.70711C13.4804 7.89464 13.7348 8 14 8ZM14 14C13.7348 14 13.4804 14.1054 13.2929 14.2929C13.1054 14.4804 13 14.7348 13 15V17C13 17.2652 13.1054 17.5196 13.2929 17.7071C13.4804 17.8946 13.7348 18 14 18C14.2652 18 14.5196 17.8946 14.7071 17.7071C14.8946 17.5196 15 17.2652 15 17V15C15 14.7348 14.8946 14.4804 14.7071 14.2929C14.5196 14.1054 14.2652 14 14 14Z"/>
                     </svg>
-                    <span class="semi-bold color--black hover">Ремонт бытовой техники</span>
+                    <span class="semi-bold color--main hover">Ремонт бытовой техники</span>
                 </a>
                 <a href="#" class="header__sub-menu-elem flex hover">
                     <svg class="hover" viewBox="0 0 80 66" xmlns="http://www.w3.org/2000/svg">
                         <path d="M74 0H6C2.7 0 0 2.7 0 6V48C0 51.3 2.7 54 6 54H28V58.2C27.9 58.6 27.1 59.7 26.7 60.2C25.6 61.6 24.5 63 25.3 64.6C25.6 65.3 26.4 66 28 66H51C52 66 54.3 66 55.1 64.2C55.9 62.4 54.5 61 53.3 59.7C52.9 59.2 52.2 58.5 52 58.1V54H74C77.3 54 80 51.3 80 48V6C80 2.7 77.3 0 74 0ZM30.3 62C31.2 60.9 32 59.6 32 58.2V54H48V58.2C48 59.6 49 60.9 50 62H30.3ZM76 48C76 49.1 75.1 50 74 50H6C4.9 50 4 49.1 4 48V42H76V48ZM76 38H4V6C4 4.9 4.9 4 6 4H74C75.1 4 76 4.9 76 6V38Z"/>
                     </svg>
-                    <span class="semi-bold color--black hover">Ремонт ПК</span>
+                    <span class="semi-bold color--main hover">Ремонт ПК</span>
                 </a>
                 <a href="#" class="header__sub-menu-elem flex hover">
                     <svg class="hover" viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg">
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M27.219 7.2094L27.1289 7.1396C26.9561 5.8258 26.3265 4.4574 25.3446 3.30289C23.7495 1.42761 21.1506 0 17.6697 0C14.2409 0 11.8226 1.56423 10.3967 3.50251C9.6911 4.4616 9.2279 5.5122 9.0005 6.5097C8.9537 6.7148 8.9163 6.9208 8.8889 7.1258L8.781 7.2094C7.6569 8.0801 6.8323 9.1359 7.0277 10.3468C7.2165 11.5167 8.2736 12.2289 9.2576 12.6644C9.5084 12.7754 9.7784 12.8791 10.0651 12.9756C10.0221 13.3113 10 13.6533 10 14C10 18.4183 13.5817 22 18 22C22.4183 22 26 18.4183 26 14C26 13.6533 25.9779 13.3113 25.9349 12.9756C26.2216 12.8791 26.4916 12.7754 26.7424 12.6644C27.7264 12.2289 28.7835 11.5167 28.9723 10.3468C29.1677 9.1359 28.3431 8.0801 27.219 7.2094ZM10.9447 8.6719C10.8148 8.298 10.781 7.6975 10.9504 6.9542C11.1158 6.229 11.4606 5.4345 12 4.6982V7.5C12 8.0523 12.4477 8.5 13 8.5C13.5523 8.5 14 8.0523 14 7.5V2.91075C14.8229 2.44152 15.818 2.11503 17 2.02506V5.5C17 6.0523 17.4477 6.5 18 6.5C18.5523 6.5 19 6.0523 19 5.5V2.08698C20.1683 2.24422 21.1674 2.60479 22 3.0873V7.5C22 8.0523 22.4477 8.5 23 8.5C23.5523 8.5 24 8.0523 24 7.5V4.8182C25.1046 6.2344 25.3637 7.7622 25.0529 8.679C24.8756 9.202 25.1559 9.7698 25.679 9.9471C26.1055 10.0917 26.5619 9.9319 26.8118 9.5843C27.009 9.8594 27.0015 10.0054 26.9978 10.0282C26.9849 10.1083 26.8316 10.4378 25.9329 10.8356C25.5427 11.0083 25.0792 11.1634 24.5577 11.2999L24.5341 11.3057C23.9689 11.4525 23.34 11.5767 22.6667 11.6777C21.51 11.8512 20.2222 11.9561 18.9003 11.9889C18.6016 11.9963 18.3011 12 18 12C17.4283 12 16.8588 11.9866 16.2992 11.96C15.2566 11.9105 14.2484 11.8153 13.3242 11.6763C12.6543 11.5756 12.0286 11.4518 11.4659 11.3057L11.4424 11.2999C10.9208 11.1634 10.4573 11.0083 10.0671 10.8356C9.1684 10.4378 9.0151 10.1083 9.0022 10.0282C8.9985 10.0054 8.991 9.8594 9.1882 9.5843C9.4398 9.9342 9.9001 10.0933 10.3281 9.9447C10.8498 9.7635 11.1258 9.1936 10.9447 8.6719ZM12.0221 13.4809C12.3543 13.546 12.6978 13.6049 13.0503 13.6576C14.1182 13.8172 15.2685 13.92 16.4383 13.9681C16.9569 13.9894 17.4793 14 18 14C18.5228 14 19.0473 13.9893 19.568 13.9679C20.7323 13.9198 21.8773 13.8175 22.9408 13.6589C23.2964 13.6059 23.6429 13.5466 23.9779 13.4809C23.9925 13.6519 24 13.825 24 14C24 17.3137 21.3137 20 18 20C14.6863 20 12 17.3137 12 14C12 13.825 12.0075 13.6518 12.0221 13.4809ZM23 22.4896C23.6578 22.6045 24.3281 22.7389 25 22.8923C30.4433 24.1349 36 26.6202 36 30.0001V36.0001H0V30.0001C0 26.6202 5.5567 24.1349 11 22.8923C11.672 22.7389 12.3422 22.6045 13 22.4896V27H23V22.4896ZM9 25.4912C9.654 25.2915 10.3247 25.1096 11 24.9466V29H25V24.9466C26.0247 25.1938 27.0386 25.4849 28 25.8152V34H30V26.5967C30.2893 26.7257 30.5693 26.8587 30.8384 26.9956C31.9747 27.5735 32.8176 28.1704 33.3521 28.7401C33.8768 29.2993 34 29.7126 34 30.0001V34.0001H2V30.0001C2 29.7126 2.1232 29.2993 2.64787 28.7401C3.18243 28.1704 4.0253 27.5735 5.1616 26.9956C5.7306 26.7062 6.3483 26.434 7 26.1806V34H9V25.4912Z"/>
                     </svg>
-                    <span class="semi-bold color--black hover">Муж на час</span>
+                    <span class="semi-bold color--main hover">Муж на час</span>
                 </a>
             </nav>
         </div>
