--- a/rsm/home.html
+++ b/rsm/home.html
@@ -622,7 +622,7 @@
                         <div class="form__top grid">
                             <h1 class="form__title color--black">Скидка 10% при заказе с сайта только сегодня!</h1>
                             <p id="countdown" class="form__descr color--black semi-bold">
-                                До конца акции остается <span class="hours">2</span> ч. <span class="minutes">2</span> мин.
+                                До конца акции остается <span class="hours"></span> ч. <span class="minutes"></span> мин. <span class="seconds"></span> сек.
                             </p>
                         </div>
                         <div class="form__bottom flex">
